<resources>
    <string name="app_name">StoryApp</string>
    <string name="tertarik_daftar_dahulu">Tertarik? Daftar Dahulu!</string>
    <string name="username">Username</string>
    <string name="hint_username">tuliskan username anda!</string>
    <string name="title_login">Sudah siap untuk bercerita?</string>
    <string name="text_email">Email</string>
    <string name="hint_email">Tuliskan email anda!</string>
    <string name="text_password">Password</string>
    <string name="hint_password">masukan password anda</string>
    <string name="login">MASUK</string>
    <string name="text_register">belum punya akun? Daftar disini!</string>
    <string name="daftar">DAFTAR</string>
    <string name="add_story">add story</string>
    <string name="description">Description :</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hint_description">Masukan deskripsi photo!</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="favorite">Favorite</string>
    <string name="location">Location</string>
    <string name="retry">Coba lagi</string>
    <string name="gunakan_lokasi_terakhir">Gunakan lokasi terakhir</string>
</resources>